--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -399,7 +399,7 @@
                           {% endif %}
 
                             <span lang="pt">
-                              {% language "pt" %}
+                              {% language "pt-br" %}
                                 {{aula.endDate|date:"d/m"}}
                                 <span class="t_f">/{{aula.endDate.year}}</span>
                                 <span class="t_s">/{{aula.endDate|date:"y"}}</span>
