--- a/templates/data_ml.html
+++ b/templates/data_ml.html
@@ -8,7 +8,7 @@
 {% load i18n %}
 
 <span lang="pt">
-  {% language "pt" %}
+  {% language "pt-br" %}
     <span class="opt_full">{{date|date:"DATE_FORMAT"}}</span>
     <span class="opt_short">{{date|date:"d/m/y"}}</span>
   {% endlanguage %}
