--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -21,19 +21,43 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8 col-lg-6">
-      <div class="card shadow-sm">
-        <div class="card-header text-center bg-warning text-dark">
-          <h4>Desconectado</h4>
-        </div>
-        <div class="card-body text-center">
-          <p class="card-text">Você foi desconectado do sistema.</p>
-          <a href="{% url 'login' %}" class="btn btn-primary mt-3">Clique aqui para fazer o login novamente</a>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <div class="card shadow-sm">
+          <div class="card-header text-center bg-warning text-dark">
+            <h4>
+              <span lang="pt">
+                Desconectado
+              </span>
+              <span lang="en" style="display: none;">
+                Disconnected
+              </span>
+            </h4>
+          </div>
+          <div class="card-body text-center">
+            <p class="card-text">
+              <span lang="pt">
+                Você foi desconectado do sistema.
+              </span>
+              <span lang="en" style="display: none;">
+                You have been disconnected from the system.
+              </span>
+            </p>
+            <a href="{% url 'login' %}" class="btn btn-primary mt-3">
+              <span lang="pt">
+                Clique aqui para fazer o login novamente
+              </span>
+              <span lang="en" style="display: none;">
+                Click here to login again
+              </span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  {% include "linguas.html" %}
+  
 {% endblock %}
