--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,6 +6,7 @@
 {% endcomment %}
 
 {% block head %}
+  {% load i18n %}
   <style>
     .container {max-width: 840px;}
     .card {border-radius: 10px;}
@@ -21,24 +22,53 @@
 {% endblock %}
 
 {% block content %}
-  <div class="container mt-5">
+  <div class="container mt-4">
     <div class="row justify-content-center">
-      <div class="col-md-8 col-lg-6">
+      <div class="col-sm-9 col-md-7 col-lg-7">
         <div class="card shadow-sm">
           <div class="card-header text-center bg-primary text-white">
-            <h2>Login</h2>
+            <h2>
+              <span lang="pt">
+                Autenticação de Usuário
+              </span>
+              <span lang="en" style="display: none;">
+                User Authentication
+              </span>
+            </h2>
           </div>
           <div class="card-body">
             <form method="post">
               {% csrf_token %}
               <div class="form-group row mb-1">
-                <label for="{{ form.username.id_for_label }}" class="col-sm-3 col-form-label">{{ form.username.label }}</label>
+                <label for="{{ form.username.id_for_label }}" class="col-sm-3 col-form-label pr-0">
+                  <span lang="pt">
+                    {% language "pt-br" %}
+                      {{ form.username.label }}
+                    {% endlanguage %}
+                  </span>
+                  <span lang="en" style="display: none;">
+                    {% language "en" %}
+                      {{ form.username.label }}
+                    {% endlanguage %}
+                  </span>
+                </label>
                 <div class="col-sm-9">
                   {{ form.username }}
                 </div>
               </div>
               <div class="form-group row mb-3">
-                <label for="{{ form.password.id_for_label }}" class="col-sm-3 col-form-label">{{ form.password.label }}</label>
+                <label for="{{ form.password.id_for_label }}" class="col-sm-3 col-form-label pr-0">
+                  <span lang="pt">
+                    {% language "pt-br" %}
+                      {{ form.password.label }}
+                    {% endlanguage %}
+                  </span>
+                  <span lang="en" style="display: none;">
+                    {% language "en" %}
+                      {{ form.password.label }}
+                    {% endlanguage %}
+                  </span>
+                </label>
                 <div class="col-sm-9">
                   {{ form.password }}
                 </div>
@@ -47,13 +77,22 @@
                 <button class="btn btn-primary mb-3" type="submit">Login</button>
               </div>
             </form>
-            <p class="text-center mt-3"><a href="{% url 'password_reset' %}">Criar/Recriar senha</a></p>
+            <p class="text-center mt-3"><a href="{% url 'password_reset' %}">
+              <span lang="pt">Criar/Recriar senha</span>
+              <span lang="en" style="display: none;">Create/Reset password</span>
+            </a></p>
           </div>
           <div class="card-footer text-muted text-center">
-            <p class="mb-0">Atenção: você não deve colocar o @insper.edu.br ou @al.insper.edu.br, coloque somente o seu login.</p>
+            <p class="mb-0">
+              <span lang="pt">Atenção: você não deve colocar o @insper.edu.br ou @al.insper.edu.br, coloque somente o seu login.</span>
+              <span lang="en" style="display: none;">Attention: you should not put the @insper.edu.br or @al.insper.edu.br, put only your login.</span>
+            </p>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  {% include "linguas.html" %}
+
 {% endblock %}
