--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -26,14 +26,26 @@
       <div class="col-md-8 col-lg-6">
         <div class="card shadow-sm">
           <div class="card-header text-center bg-success text-white">
-            <h4>Senha Atualizada</h4>
+            <h4>
+              <span lang="pt">Senha Atualizada</span>
+              <span lang="en" style="display: none">Password Updated</span>
+            </h4>
           </div>
           <div class="card-body text-center">
-            <p class="card-text">Sua senha foi atualizada com sucesso!</p>
-            <a href="{% url 'login' %}" class="btn btn-primary mt-3">Fazer o Login</a>
+            <p class="card-text">
+              <span lang="pt">Sua senha foi atualizada com sucesso!</span>
+              <span lang="en" style="display: none">Your password has been updated successfully!</span>
+            </p>
+            <a href="{% url 'login' %}" class="btn btn-primary mt-3">
+              <span lang="pt">Fazer o Login</span>
+              <span lang="en" style="display: none">Log In</span>
+            </a>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  {% include "linguas.html" %}
+
 {% endblock %}
