--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -21,49 +21,52 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8 col-lg-6">
-      <div class="card shadow-sm">
-        <div class="card-header text-center bg-primary text-white">
-          <h4>Redefinição de Senha</h4>
-        </div>
-        <div class="card-body">
-          {% if validlink %}
-            <p class="card-text mb-3">Digite uma nova senha e confirme.</p>
-            <form action="" method="post">
-              {% csrf_token %}
-              <div class="form-group row mb-1">
-                <label for="id_new_password1" class="col-sm-5 form-label">Nova senha:</label>
-                <div class="col-sm-7">
-                    {{ form.new_password1 }}
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-lg-6">
+        <div class="card shadow-sm">
+          <div class="card-header text-center bg-primary text-white">
+            <h4>Redefinição de Senha</h4>
+          </div>
+          <div class="card-body">
+            {% if validlink %}
+              <p class="card-text mb-3">Digite uma nova senha e confirme.</p>
+              <form action="" method="post">
+                {% csrf_token %}
+                <div class="form-group row mb-1">
+                  <label for="id_new_password1" class="col-sm-5 form-label">Nova senha:</label>
+                  <div class="col-sm-7">
+                      {{ form.new_password1 }}
+                  </div>
+                  {% if form.new_password1.errors %}
+                    <div class="text-danger mt-1">{{ form.new_password1.errors }}</div>
+                  {% endif %}
                 </div>
-                {% if form.new_password1.errors %}
-                  <div class="text-danger mt-1">{{ form.new_password1.errors }}</div>
-                {% endif %}
-              </div>
-              <div class="form-group row mb-1">
-                <label for="id_new_password2" class="col-sm-5 form-label">Confirme senha:</label>
-                <div class="col-sm-7">
-                    {{ form.new_password2 }}
+                <div class="form-group row mb-1">
+                  <label for="id_new_password2" class="col-sm-5 form-label">Confirme senha:</label>
+                  <div class="col-sm-7">
+                      {{ form.new_password2 }}
+                  </div>
+                  {% if form.new_password2.errors %}
+                    <div class="text-danger mt-1">{{ form.new_password2.errors }}</div>
+                  {% endif %}
                 </div>
-                {% if form.new_password2.errors %}
-                  <div class="text-danger mt-1">{{ form.new_password2.errors }}</div>
-                {% endif %}
+                <div class="d-grid">
+                  <button class="btn btn-primary mb-3" type="submit">Atualizar Senha</button>
+                </div>
+              </form>
+            {% else %}
+              <div class="alert alert-danger" role="alert">
+                <h5 class="alert-heading">Atualização da senha falhou</h5>
+                <p>O link de redefinição de senha era inválido, possivelmente porque já foi usado. Solicite uma nova redefinição de senha.</p>
               </div>
-              <div class="d-grid">
-                <button class="btn btn-primary mb-3" type="submit">Atualizar Senha</button>
-              </div>
-            </form>
-          {% else %}
-            <div class="alert alert-danger" role="alert">
-              <h5 class="alert-heading">Atualização da senha falhou</h5>
-              <p>O link de redefinição de senha era inválido, possivelmente porque já foi usado. Solicite uma nova redefinição de senha.</p>
-            </div>
-          {% endif %}
+            {% endif %}
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+  
+  {% include "linguas.html" %}
+
 {% endblock %}
