--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -26,13 +26,27 @@
       <div class="col-md-8 col-lg-6">
         <div class="card shadow-sm">
           <div class="card-header text-center bg-primary text-white">
-            <h2>Acesso ao Sistema</h2>
+            <h2>
+              <span lang="pt">
+                Recuperação de Senha
+              </span>
+              <span lang="en" style="display: none;">
+                Password Recovery
+              </span>
+            </h2>
           </div>
           <div class="card-body">
             <form action="" method="post">
               {% csrf_token %}
               <div class="form-group mb-3">
-                <p>Informe seu e-mail para criarmos uma nova senha para você.</p>
+                <p>
+                  <span lang="pt">
+                    Informe seu e-mail para criarmos uma nova senha para você.
+                  </span>
+                  <span lang="en" style="display: none;">
+                    Inform your e-mail to create a new password for you.
+                  </span>
+                </p>
               </div>
               <div class="form-group mb-3">
                 <label for="{{ form.email.id_for_label }}" class="form-label">E-mail</label>
@@ -42,26 +56,75 @@
                 {% endif %}
               </div>
               <div class="d-grid">
-                <button class="btn btn-primary mb-3" type="submit" value="Reset password">Cria/Recriar Senha</button>
+                <button class="btn btn-primary mb-3" type="submit" value="Reset password">
+                  <span lang="pt">
+                    Cria/Recriar Senha
+                  </span>
+                  <span lang="en" style="display: none;">
+                    Create/Recreate Password
+                  </span>
+                </button>
               </div>
             </form>
             <div class="mt-3">
               <div class="card mb-2">
                 <div class="card-body">
-                  <h5 class="card-title">Estudantes Insper</h5>
-                  <p class="card-text">e-mail deve terminar em @al.insper.edu.br</p>
+                  <h5 class="card-title">
+                    <span lang="pt">
+                      Estudantes Insper
+                    </span>
+                    <span lang="en" style="display: none;">
+                      Insper Students
+                    </span>
+                  </h5>
+                  <p class="card-text">
+                    <span lang="pt">
+                      e-mail deve terminar em @al.insper.edu.br
+                    </span>
+                    <span lang="en" style="display: none;">
+                      e-mail must end in @al.insper.edu.br
+                    </span>
+                  </p>
                 </div>
               </div>
               <div class="card mb-2">
                 <div class="card-body">
-                  <h5 class="card-title">Professores Insper</h5>
-                  <p class="card-text">e-mail deve terminar em @insper.edu.br</p>
+                  <h5 class="card-title">
+                    <span lang="pt">
+                      Professores Insper
+                    </span>
+                    <span lang="en" style="display: none;">
+                      Insper Professors
+                    </span>
+                  </h5>
+                  <p class="card-text">
+                    <span lang="pt">
+                      e-mail deve terminar em @insper.edu.br
+                    </span>
+                    <span lang="en" style="display: none;">
+                      e-mail must end in @insper.edu.br
+                    </span>
+                  </p>
                 </div>
               </div>
               <div class="card mb-2">
                 <div class="card-body">
-                  <h5 class="card-title">Parceiros</h5>
-                  <p class="card-text">e-mail deve estar cadastrado no sistema</p>
+                  <h5 class="card-title">
+                    <span lang="pt">
+                      Parceiros
+                    </span>
+                    <span lang="en" style="display: none;">
+                      Partners
+                    </span>
+                  </h5>
+                  <p class="card-text">
+                    <span lang="pt">
+                      e-mail deve estar cadastrado no sistema
+                    </span>
+                    <span lang="en" style="display: none;">
+                      e-mail must be registered in the system
+                    </span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -70,4 +133,7 @@
       </div>
     </div>
   </div>
+
+  {% include "linguas.html" %}
+
 {% endblock %}
