--- a/templates/generic.html
+++ b/templates/generic.html
@@ -13,58 +13,105 @@
   <br><br>
 
   {% if voltar %}
-    <a href='javascript:history.back(1)'>Voltar</a><br><br>
+    <a href='javascript:history.back(1)'>
+      <span lang="pt">Voltar</span>
+      <span lang="en" style="display:none">Back</span>
+    </a><br><br>
   {% endif %} 
 
   {% if agendar_banca %}
-    <a href="{% url 'bancas_criar' %}">Agendar outra banca</a><br>
+    <a href="{% url 'bancas_criar' %}">
+      <span lang="pt">Agendar outra banca</span>
+      <span lang="en" style="display:none">Schedule another examination board</span>
+    </a><br>
   {% endif %}
 
   {% if agendar_dinamica %}
-    <a href="{% url 'dinamicas_criar' %}">Agendar outra mentoria/dinâmica</a><br>
+    <a href="{% url 'dinamicas_criar' %}">
+      <span lang="pt">Agendar outra dinâmica</span>
+      <span lang="en" style="display:none">Schedule another dynamic</span>
+    </a><br>
   {% endif %}
 
   {% if organizacao %}
-    <a href="{% url 'organizacao_completo' organizacao.id %}">Ver organização cadastrada</a><br>
-    <a href="{% url 'cadastrar_organizacao' %}">Cadastrar outra organização</a><br>
+    <a href="{% url 'organizacao_completo' organizacao.id %}">
+      <span lang="pt">Ver organização cadastrada</span>
+      <span lang="en" style="display:none">See registered organization</span>
+    </a><br>
+    <a href="{% url 'cadastrar_organizacao' %}">
+      <span lang="pt">Cadastrar outra organização</span>
+      <span lang="en" style="display:none">Register another organization</span>
+    </a><br>
   {% endif %}
 
   {% if usuario %}
-    <a href="{% url 'user_detail' usuario.id %}">Ver usuário cadastrado</a><br>
-    <a href="{% url 'cadastrar_usuario' %}">Cadastrar outro usuário</a><br>
+    <a href="{% url 'user_detail' usuario.id %}">
+      <span lang="pt">Ver usuário cadastrado</span>
+      <span lang="en" style="display:none">See registered user</span>
+    </a><br>
+    <a href="{% url 'cadastrar_usuario' %}">
+      <span lang="pt">Cadastrar outro usuário</span>
+      <span lang="en" style="display:none">Register another user</span>
+    </a><br>
   {% endif %}
 
   {% if area_aluno %}
-    <a href="{% url 'index_estudantes' %}">Ir para Área dos Estudantes</a><br>
+    <a href="{% url 'index_estudantes' %}">
+      <span lang="pt">Ir para Área dos Estudantes</span>
+      <span lang="en" style="display:none">Go to Students Area</span>
+    </a><br>
   {% endif %}
 
   {% if bancas_index %}
-    <a href="{% url 'bancas_index' %}">Ir para índice das bancas</a><br>
+    <a href="{% url 'bancas_index' %}">
+      <span lang="pt">Ir para índice das bancas</span>
+      <span lang="en" style="display:none">Go to examination boards index</span>
+    </a><br>
   {% endif %}
 
   {% if organizacao_completo %}
-      <a href="{% url 'organizacao_completo' organizacao_completo %}">Ir para organização</a><br>
+      <a href="{% url 'organizacao_completo' organizacao_completo %}">
+        <span lang="pt">Ver organização cadastrada</span>
+        <span lang="en" style="display:none">See registered organization</span>
+      </a><br>
   {% endif %}
 
   {% if organizacoes_lista %}
-    <a href="{% url 'organizacoes_lista' %}">Lista de todas as organizações</a><br>
+    <a href="{% url 'organizacoes_lista' %}">
+      <span lang="pt">Ver lista de organizações</span>
+      <span lang="en" style="display:none">See list of organizations</span>
+    </a><br>
   {% endif %}
 
   {% if organizacoes_prospectadas %}
-    <a href="{% url 'organizacoes_prospect' %}">Lista de organizações prospectadas</a><br>
+    <a href="{% url 'organizacoes_prospect' %}">
+      <span lang="pt">Ver lista de organizações prospectadas</span>
+      <span lang="en" style="display:none">See list of prospected organizations</span>
+    </a><br>
   {% endif %}
 
   {% if propostas_lista %}
-    <a href="{% url 'propostas_apresentadas' %}">Lista de propostas apresentadas</a><br>
+    <a href="{% url 'propostas_apresentadas' %}">
+      <span lang="pt">Ver lista de propostas apresentadas</span>
+      <span lang="en" style="display:none">See list of proposals presented</span>
+    </a><br>
   {% endif %}
 
   {% if avaliar_entregas %}
-    <a href="{% url 'avaliar_entregas' %}">Voltar para janela de avaliações do semestre</a><br>
+    <a href="{% url 'avaliar_entregas' %}">
+      <span lang="pt">Voltar para janela de avaliações do semestre</span>
+      <span lang="en" style="display:none">Back to semester evaluations window</span>
+    </a><br>
   {% endif %}
 
   {% if area_principal %}
     <br><br>
-    <a href="{% url 'index' %}">Voltar para Página Principal</a><br>
+    <a href="{% url 'index' %}">
+      <span lang="pt">Voltar para Página Principal</span>
+      <span lang="en" style="display:none">Back to Main Page</span>
+    </a><br>
   {% endif %}
+
+  {% include "linguas.html" %}
 
 {% endblock %}
